Fixed input element overflow from parent

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,13 @@ p {
     align-items: center
 }
 
+.card-body input {
+    width: 100%;
+    /* Ensure the input tries to fill the container */
+    box-sizing: border-box;
+    /* Include padding and border in the width calculation */
+}
+
 #divCamera {
     width: 100%;
     max-width: 100%;
